# qt_ws_project

./: CMakeLists.txt  main.cpp  main.qml  test_klasse.cpp  test_klasse.h  test_klasse_2.cpp  test_klasse_2.h
